--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "debug": "^4.1.0",
     "ejs": "~2.3.3",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "socket.io": "^2.2.0"
   }
 }
